Cleaned up some log table layout issues

--- a/Website/Composite/console/console.scss
+++ b/Website/Composite/console/console.scss
@@ -464,25 +464,32 @@ fieldset {
 		clear: both;
 	}
 }
-
-.public_fixedDataTableCell_cellContent {
-	padding: 5px;
-}
-.fixedDataTableCellLayout_wrap3 {
-	vertical-align: inherit;
-}
-.Information {
-	background-color: lime;
-}
-.Warning {
-	background-color: orange;
-}
-.Error {
-	background-color: red;
-}
-.Critical {
-	background-color: crimson;
-}
-pre {
-	margin: 0;
+div.entry { // Needed to override default stylesheet
+	.public_fixedDataTableCell_cellContent {
+		padding: 5px;
+	}
+	.fixedDataTableCellLayout_wrap3 {
+		vertical-align: inherit;
+	}
+	.public_fixedDataTable_header,
+	.public_fixedDataTable_header .public_fixedDataTableCell_main {
+		background-color: $darkBackground;
+		background-image: none;
+		border-right-width: 0;
+	}
+	.Information {
+		background-color: lime;
+	}
+	.Warning {
+		background-color: orange;
+	}
+	.Error {
+		background-color: red;
+	}
+	.Critical {
+		background-color: crimson;
+	}
+	pre {
+		margin: 0;
+	}
 }
